# dqa

./: .env-template  .env.docker  .gitignore  .pre-commit-config.yaml  README.md  dapr.yaml  local.dockerfile  pyproject.toml  requirements-frozen.txt  requirements.txt  start_dapr_multi.sh  stop_dapr_multi.sh  workflows.md
.dapr/components/: pubsub.yaml
.github/workflows/: python-linter-format-checker.yml  uv-pytest.yml
conf/: llm.json  mcp.json
config/: chat-ollama.json  llms.json  mcp-client.json
diagrams/: workflow.excalidraw
dqa/: common.py  utils.py
dqa/acp/: client.py  server.py
dqa/agent/: dqa.py  langchain_agent.py  orchestrator.py
dqa/mcp/: arithmetic.py  docling.py  server.py  time.py
dqa/nicegui/: app.py
dqa/webapp/: adapters.py  app.py  modules.py
src/: dqa.py  tools.py  utils.py  webapp.py  workflows.py
src/dqa/: __init__.py
src/dqa/actor/: __init__.py  echo_task.py  mhqa.py  pubsub_topics.py
src/dqa/cli/: a2a.py
src/dqa/client/: a2a_mixin.py
src/dqa/executor/: echo_task.py  mhqa.py
src/dqa/mcp/: arithmetic.py  datetime.py  ollama.py  primary.py
src/dqa/model/: mhqa.py
src/dqa/server/: dapr.py  echo_a2a.py  mhqa_a2a.py
src/dqa/web/: gradio.py
src/workflows/: common.py  dqa.py  lats.py  react.py  react_src.py  self_discover.py  ssq_react.py
tests/: mcp_test_mixin.py  test_arithmetic_mcp.py  test_cli.py  test_datetime_mcp.py  test_hello.py  test_ollama_mcp.py  test_primary_mcp.py
