[project]
name = "dqa"
version = "0.1.0"
description = "Difficult Questions Attempted - multi-hop question answering (MHQA) with language models."
readme = "README.md"
authors = [
    { name = "Anirban Basu", email = "anirbanbasu@users.noreply.github.com" }
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.0.2",
    "fastmcp>=2.7.0",
    "frankfurtermcp>=0.2.4",
    "gradio>=5.33.0",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-tools-mcp>=0.2.5",
    "python-dotenv>=1.1.0",
]

[project.scripts]
dqa-webapp = "dqa.webapp.app:main"
dqa-mcp = "dqa.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "icecream>=2.1.4",
]
test = [
    "pytest>=8.4.0",
]
