[project]
name = "dqa"
version = "0.1.0"
description = "Difficult Questions Attempted - multi-hop question answering (MHQA) with language models."
readme = "README.md"
authors = [
    { name = "Anirban Basu", email = "anirbanbasu@users.noreply.github.com" }
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "acp-sdk>=1.0.0",
    "docling>=2.42.2",
    "duckduckgo-mcp-server>=0.1.1",
    "fastmcp>=2.7.0",
    "frankfurtermcp>=0.3.2",
    "gradio>=5.38.0",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-tools-mcp>=0.2.5",
    "nicegui>=2.20.0",
    "python-dotenv>=1.1.0",
    "pywebview>=5.4",
    "textual>=5.0.0",
    "torch==2.7.1",
    "torchvision==0.17.2",
    "typer>=0.16.0",
]

[project.scripts]
dqa-webapp = "dqa.webapp.app:main"
dqa-nicegui = "dqa.nicegui.app:typer_app"
dqa-mcp = "dqa.mcp.server:main"
dqa-acp = "dqa.acp.server:main"
dqa-acp-api = "dqa.acp.api:main"
dqa-acp-client = "dqa.acp.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "icecream>=2.1.4",
    "pre-commit>=4.2.0",
]
test = [
    "pytest>=8.4.0",
]
