[project]
name = "dqa"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anirban Basu", email = "anirbanbasu@users.noreply.github.com" }
]
requires-python = ">=3.12.0"
dependencies = [
    "a2a-sdk[http-server]>=0.3.6",
    "anyio>=4.11.0",
    "dapr>=1.16.0",
    "dapr-ext-fastapi>=1.16.0",
    "environs>=14.3.0",
    "fastmcp>=2.12.4",
    "frankfurtermcp>=0.3.6",
    "gradio>=5.46.1",
    "llama-index-llms-ollama>=0.7.4",
    "llama-index-tools-mcp>=0.4.1",
    "ollama>=0.6.0",
    "typer>=0.19.1",
    "yfmcp>=0.4.8",
]

[project.scripts]
pad = "dqa:main"
dapr-srv = "dqa.server.dapr:main"
echo-a2a-srv = "dqa.server.echo_a2a:main"
mhqa-a2a-srv = "dqa.server.mhqa_a2a:main"
dqa-mcp = "dqa.mcp.primary:main"
dqa-cli = "dqa.cli.a2a:main"
dqa-web-app = "dqa.web.gradio:main"
demo-client = "dqa.cli.demo:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "icecream>=2.1.8",
    "pre-commit>=4.3.0",
]
test = [
    "coverage>=7.10.6",
    "pytest>=8.4.2",
]
